src/test/deca/syntax/invalid/sansobjet/DeclFlHexMax.deca
//DeclFlHexMax.deca:5:26: Erreur de compilation: flottant arrondi a l'infini
//Description: teste creation folttant infini
//Resultats: erreur ligne 5: arrondi a infini
{
    float t = 0x13.FFFp130;
}
